# flux

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENT.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Makefile  POSTGRESQL.md  README.md  SECURITY.md  STRATEGIC_ROADMAP.md  debug_pause.py  debug_pause_details.py  docker-compose.yml  flux.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.db
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-publish.yml  docker-publish.yml  docs.yml  perf.yml  pull-request.yml
advanced-features/agent-harness/: index.html
advanced-features/agent-plans/: index.html
advanced-features/agent-skills/: index.html
advanced-features/ai-agents/: index.html
advanced-features/ai-memory/: index.html
advanced-features/airgapped-execution/: index.html
advanced-features/approvals/: index.html
advanced-features/authentication/: index.html
advanced-features/cancellation/: index.html
advanced-features/database-migrations/: index.html
advanced-features/dynamic-routing/: index.html
advanced-features/mcp-client/: index.html
advanced-features/namespaces/: index.html
advanced-features/observability/: index.html
advanced-features/parallel-tool-execution/: index.html
advanced-features/reasoning-models/: index.html
advanced-features/services/: index.html
advanced-features/sub-agents/: index.html
advanced-features/system-tools/: index.html
advanced-features/task-patterns/: index.html
advanced-features/task-progress/: index.html
advanced-features/worker-affinity/: index.html
advanced-features/workflow-controls/: index.html
core-concepts/error-handling/: index.html
core-concepts/execution-model/: index.html
core-concepts/replay-determinism/: index.html
core-concepts/tasks/: index.html
core-concepts/workflow-management/: index.html
dev/keycloak/: flux-realm.json
docker/observability/: otel-collector-config.yaml  prometheus.yml
docker/postgres/: Dockerfile
docker/profiles/: ci.yml  monitoring.yml  observability.yml  postgresql-test.yml  postgresql.yml  sqlite.yml
docker/scripts/: entrypoint.sh  healthcheck.sh  wait-for-postgres.sh
docs/: contributing.md  index.md  production-deployment.md  production-readiness-review.md
docs/advanced-features/: agent-harness.md  agent-plans.md  agent-skills.md  ai-agents.md  ai-memory.md  airgapped-execution.md  approvals.md  authentication.md  cancellation.md  database-migrations.md  dynamic-routing.md  mcp-client.md  namespaces.md  observability.md  output-storage.md  parallel-tool-execution.md  reasoning-models.md  secrets-management.md  services.md  sub-agents.md  system-tools.md  task-patterns.md  task-progress.md  worker-affinity.md  workflow-controls.md
docs/api/: context.md  events.md  task.md  workflow.md
docs/cli/: index.md  secrets.md  start.md  workflow.md
docs/core-concepts/: error-handling.md  execution-model.md  replay-determinism.md  tasks.md  workflow-cancellation.md  workflow-management.md
docs/deployment/: development-workflow.md  local-execution.md  server-architecture.md  server-setup.md  testing-debugging.md  worker-management.md
docs/examples/: basic.md  complex.md  error-handling.md  parallel.md
docs/getting-started/: basic-concepts.md  basic_concepts.md  built-in-tasks.md  execution-context.md  first-workflow.md  installation.md  quick-start-guide.md  tasks.md  workflows.md
docs/introduction/: architecture.md  features.md  overview.md  use-cases.md  welcome.md
docs/specs/: 2026-07-14-airgapped-runner-spec.md  2026-07-15-agent-vocabulary-spec.md  2026-07-15-dynamic-workflows-spec.md  2026-07-16-airgapped-capability-knobs.md  2026-07-16-airgapped-service-sockets.md  2026-07-20-worker-metadata-spec.md
docs/tutorials/: best-practices.md  faq.md  index.md  parallel-processing.md  troubleshooting.md  working-with-tasks.md  your-first-workflow.md
docs/user-guide/: data-flow.md  error-management.md  fault-tolerance.md  secrets-management.md  security.md  task-configuration.md  task-definition.md  task-mapping.md  workflow-control.md  workflow-patterns.md
examples/: affinity_expressions.py  airgapped.py  cancellation.py  complex_pipeline.py  dataframe_with_pause.py  determinism.py  fibo_benchmark.py  github_stars.py  github_stars_parallel  hello_world.py  multiple_pause_points.py  nested_tasks.py  output_storage.py  parallel_tasks.py  pause.py  pause_with_input.py  resource_requests.py  resume_payload_example.py  runners.py  scheduled_workflow.py  simple_pipeline.py  sleep.py  subflows.py  task_progress_example.py  using_secrets.py
examples/agents/: README.md  api_client.py  assistant.yaml  coder.yaml  custom_tools.py  custom_workflow.py  delegation.yaml  ollama_local.yaml  researcher.yaml
examples/ai/: README.md  __init__.py  blog_post_writer_ollama.py  conversational_agent_anthropic.py  conversational_agent_gemini.py  conversational_agent_ollama.py  conversational_agent_openai.py  create_sample_data.py  data_analysis_agent_ollama.py  (+34 more)
flux/: __init__.py  _base_config.py  _namespace.py  _task_context.py  approvals.py  cache.py  catalogs.py  cli.py  cli_auth.py  cli_service.py  client.py  config.py  config_manager.py  context_managers.py  decorators.py  dispatcher.py  dynamic_workflows.py  errors.py  flux.py  logging.py  mcp_server.py  models.py  output_storage.py  pydantic_models.py  remote_managers.py  retention.py  routing.py  schedule_manager.py  secret_managers.py  server.py  service_mcp.py  service_proxy.py  service_resolver.py  service_store.py  task.py  tasks.py  unit_of_work.py  utils.py  worker.py  worker_metrics.py  (+2 more)
production-deployment/: index.html
production-readiness-review/: index.html
scripts/: ci.py  stress_dispatch.py
search/: search_index.json
tests/: conftest.py  test_scheduling.py  test_scheduling_examples.py  test_validate_examples.py
(+707 files in other folders)
