[tool.poetry]
name = "flux-core"
version = "0.50.2"
description = "Flux is a distributed workflow orchestration engine to build stateful and fault-tolerant workflows."
authors = ["Eduardo Dias <edurdias@gmail.com>"]
repository = "https://github.com/edurdias/flux"
homepage = "https://github.com/edurdias/flux"
readme = "README.md"

packages = [{ include = "flux" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pyyaml = "^6.0"
sqlalchemy = "^2.0.35"
fastapi = ">=0.115.2,<0.137.0"
uvicorn = ">=0.31.1,<0.50.0"
pycryptodome = "^3.21.0"
tomli = "^2.0.2"
pydantic-settings = "^2.6.1"
dill = "^0.4.0"
h11 = "^0.16.0"
python-multipart = ">=0.0.20,<0.0.33"
httpx = {extras = ["sse"], version = "^0.28.1"}
httpx-sse = "^0.4.0"
sse-starlette = "^3.0.3"
psutil = "^7.0.0"
gputil = "^1.4.0"
types-setuptools = ">=80.7.0.20250516,<83.0.0.0"
# fastmcp 3.x is a restructured meta-package (fastmcp-slim) whose import layout
# breaks `from fastmcp import FastMCP`; migrating is feature work, not a bump.
fastmcp = ">=2.5.1,<3.0.0"
psycopg2-binary = {version = "^2.9.0", optional = true}
croniter = "^6.2.2"
types-croniter = "^6.0.0.20250809"
textual = "^8.2.7"
opentelemetry-api = {version = "^1.28", optional = true}
opentelemetry-sdk = {version = "^1.28", optional = true}
opentelemetry-exporter-otlp = {version = "^1.28", optional = true}
opentelemetry-exporter-prometheus = {version = "^0.49b0", optional = true}
prometheus-client = {version = ">=0.20", optional = true}
ollama = {version = "^0.6.0", optional = true}
openai = {version = "^2.6.0", optional = true}
anthropic = {version = ">=0.71,<0.110", optional = true}
google-genai = {version = "^2.8.0", optional = true}
pyjwt = {extras = ["crypto"], version = "^2.12.1"}
slowapi = "^0.1.9"
alembic = "^1.14"

[tool.poetry.group.dev.dependencies]
pandas = ">=2.2.3,<4.0.0"
numpy = "^2.1.1"
faiss-cpu = {version = "^1.12.0", python = ">=3.12,<3.15"}
pyright = "^1.1.384"
pylint = "^4.0.5"
bandit = "^1.7.10"
pyflakes = "^3.2.0"
radon = "^6.0.1"
prospector = "^1.12.0"
pytest = "^9.0.3"
pytest-mock = "^3.14.0"
pytest-cov = ">=5,<8"
pre-commit = "^4.0.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.43"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = {extras = ["python"], version = "^1.0.4"}
ipykernel = "^7.3.0"
poethepoet = ">=0.34,<0.47"
openai = "^2.6.0"
anthropic = ">=0.71,<0.110"
ollama = "^0.6.0"
google-genai = "^2.8.0"
ruff = "^0.15.5"
pytest-asyncio = "^1.3.0"
types-pyyaml = "^6.0.12.20250915"

[tool.poetry.scripts]
flux = "flux.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestReturnNotNoneWarning",
    "ignore::RuntimeWarning:flux.tasks",
    "ignore::RuntimeWarning:unittest.mock",
    "ignore::FutureWarning:numpy._core.fromnumeric",
    "ignore::DeprecationWarning:pydantic._internal._config",
    "ignore::pytest.PytestDeprecationWarning",
    "ignore::pytest.PytestConfigWarning"
]
markers = [
    "asyncio: marks tests as async tests",
    "integration: marks tests as integration tests (may require external dependencies)",
    "postgresql: marks tests as requiring PostgreSQL database",
    "slow: marks tests as slow running",
    "e2e: marks end-to-end tests requiring server + worker processes",
    "ollama: marks tests requiring a running Ollama instance with a compatible model",
    "network: marks tests that call live external services (rate-limit flaky in CI)",
]

[tool.coverage.run]
source = ["flux"]

[tool.coverage.report]
# Fail the suite if total coverage regresses below this threshold. Lives here
# (rather than in the CI workflow) so it applies to every `--cov` invocation and
# does not require editing protected workflow files to adjust.
fail_under = 65

# Custom commands for workflow management
[tool.poe.tasks]
test-workflows = { script = "scripts.ci:test_workflows" }

# Individual workflow tests
[tool.poe.tasks.test-pr]
help = "Test the PR workflow locally"
script = "scripts.ci:test_workflow"
args = [
    { name = "workflow", default = "pull-request.yml", positional = true },
    { name = "job", default = "test", positional = true },
    { name = "event", default = "pull_request", positional = true },
    { name = "dryrun", default = false, type = "boolean", options = ["--dryrun"] }
]

[tool.poe.tasks.test-build]
help = "Test the build workflow locally"
script = "scripts.ci:test_workflow"
args = [
    { name = "workflow", default = "build-publish.yml", positional = true },
    { name = "job", default = "build", positional = true },
    { name = "event", default = "push", positional = true },
    { name = "dryrun", default = false, type = "boolean", options = ["--dryrun"] }
]

[tool.poe.tasks.test-docs]
help = "Test the docs workflow locally"
script = "scripts.ci:test_workflow"
args = [
    { name = "workflow", default = "docs.yml", positional = true },
    { name = "job", default = "deploy", positional = true },
    { name = "event", default = "paths", positional = true },
    { name = "dryrun", default = false, type = "boolean", options = ["--dryrun"] }
]

[tool.poe.tasks.test-e2e]
help = "Run E2E tests (starts its own server + worker)"
cmd = "poetry run pytest tests/e2e/ -v"

[tool.poe.tasks.test-e2e-no-ai]
help = "Run E2E tests excluding Ollama/AI examples"
cmd = "poetry run pytest tests/e2e/ -m 'not ollama' -v"

[tool.poetry.extras]
postgresql = ["psycopg2-binary"]
observability = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-prometheus",
    "prometheus-client",
]
ai = ["ollama", "openai", "anthropic", "google-genai"]


[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
